assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');

/* single elements */

* {
    padding: 0;
    border: none;
    margin: 0;
}

body {
    font-family: Lato, sans-serif;
}

h1 {
    padding: 32px 0 0 32px;
    font-size: 350%;
}

h2 {
    font-size: 260%;
}

/* header */

#title {
    width: 100%;
    background-color: #9a9a9a;
    color: white;
}

#hero-image {
    width: 100%;
    height: 192px;
    color: white;
    background-color: #9a9a9a;
    /* hero image from shutterstock */
    background: url("../images/hero-image.jpg") no-repeat center center;
}

#title h3 {
    padding: 0 0 16px 64px;
}

/* navigation */

#navigation {
    width: 100%;
    height: 32px;
    background-color: #9a9a9a;
    color: white;
    text-align: center;
}

nav li {
    display: inline-block;
    width: 25%;
}

nav a {
    text-decoration: none;
    color: white;
    font-size: 130%;
    line-height: 32px;
}

#nav-selected {
    border-bottom: 1px solid white;
}

/* description of site */

.page-description {
    display: flex;
    width: 100%;
    height: 480px;
    text-align: center;
    padding-top: 32px;
}

.page-description p {
    font-size: 150%;
}

.description-text {
    width: 60%;
    padding: 160px 32px;
}

.description-image {
    height: 100%;
    padding: 0 16px;
}

.left-about {
    text-align: left;
}

.right-about {
    text-align: right;
}

/* finishing text */

#description-end {
    text-align: center;
    font-size: 150%;
    width: 50%;
    margin: 64px auto;
}

#to-menu {
    border: 1px solid black;
    color: white;
    background-color: #9a9a9a;
    text-decoration: none;
    padding: 16px;
}

#to-top {
    font-size: 80%;
}

